--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goGameBackend",
+  "name": "go-game-backend",
   "version": "0.1.0",
   "bin": {
     "goGameBackend": "bin/goGameBackend.js"
@@ -20,6 +20,8 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync-alpha": "^2.35.0-alpha.0",
+		"@aws-cdk/aws-cognito-identitypool-alpha": "^2.35.0-alpha.0",
     "aws-cdk-lib": "2.59.0",
     "constructs": "^10.0.0"
   }
